--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-storybook": "yarn rw storybook --build && cp web/public/mockServiceWorker.js web/public/storybook",
     "chromatic": "chromatic --project-token=cafed242b299 --storybook-build-dir web/public/storybook",
     "seed": "yarn rw exec seed",
-    "build-packages": "exit 0; cd packages/myPackage; yarn build"
+    "build-packages": "exit 0; cd packages/myPackage; yarn build",
+    "install-playwright": "yarn playwright install"
   },
   "prisma": {
     "seed": "yarn rw exec seed"
