--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "@sentry/node": "^6.17.3",
     "@sentry/tracing": "^6.17.3",
     "core-js": "^3.19.1",
+    "graphql-request": "^4.0.0",
     "playwright-aws-lambda": "^0.7.0",
     "playwright-core": "^1.18.1",
     "react": "^17.0.2",
